--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <p>Deixe seu contato!</p>
                 </div>
                 <form action="">
-                    <input type="text" id="email" name="email" placeholder="seu melhor email">
+                    <input type="text" placeholder="seu melhor email">
                     <button type="submit">enviar!</button>
                 </form>
             </div>
